--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,90 @@
 annotated-types==0.7.0
+anthropic==0.52.1
 anyio==4.9.0
+attrs==25.3.0
 beautifulsoup4==4.13.4
+cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.0
 distro==1.9.0
+filetype==1.2.0
+fuzzywuzzy==0.18.0
+geojson==3.2.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.0
+google-api-python-client==2.170.0
+google-auth==2.40.2
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
 greenlet==3.2.2
+grpcio==1.72.1
+grpcio-status==1.71.0
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.22.0
 httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
 jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 langchain==0.3.25
-langchain-core==0.3.59
-langchain-mcp-adapters==0.0.11
-langchain-openai==0.3.16
+langchain-anthropic==0.3.14
+langchain-core==0.3.63
+langchain-google-genai==2.0.10
+langchain-mcp-adapters==0.1.4
+langchain-openai==0.3.18
 langchain-text-splitters==0.3.8
-langgraph==0.4.3
-langgraph-checkpoint==2.0.25
-langgraph-prebuilt==0.1.8
+langgraph==0.4.7
+langgraph-checkpoint==2.0.26
+langgraph-prebuilt==0.2.2
 langgraph-sdk==0.1.69
 langsmith==0.3.42
-mcp==1.8.1
+Levenshtein==0.27.1
+lxml==5.4.0
+mcp==1.9.2
 openai==1.78.1
 orjson==3.10.18
 ormsgpack==1.9.1
 packaging==24.2
 playwright==1.52.0
+proto-plus==1.26.1
+protobuf==5.29.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.11.4
-pydantic-core==2.33.2
 pydantic-settings==2.9.1
+pydantic_core==2.33.2
 pyee==13.0.0
+pyparsing==3.2.3
 python-dotenv==1.1.0
+python-Levenshtein==0.27.1
 python-multipart==0.0.20
-pyyaml==6.0.2
+PyYAML==6.0.2
+RapidFuzz==3.13.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rpds-py==0.25.1
+rsa==4.9.1
 sniffio==1.3.1
 soupsieve==2.7
-sqlalchemy==2.0.41
+SQLAlchemy==2.0.41
 sse-starlette==2.3.5
 starlette==0.46.2
 tenacity==9.1.2
+thefuzz==0.22.1
 tiktoken==0.9.0
 tqdm==4.67.1
 typing-extensions==4.13.2
 typing-inspection==0.4.0
+typing_extensions==4.13.2
+uritemplate==4.2.0
 urllib3==2.4.0
 uvicorn==0.34.2
 xxhash==3.5.0
