--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "openai>=1.0.0",
     "pydantic>=2.0.0",
     "typing-extensions>=4.0.0",
+    "GitPython>=3.1.44",
 ]
 
 [project.scripts]
