--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "typing-extensions>=4.0.0",
     "GitPython>=3.1.44",
+    "backoff>=2.2.1",
 ]
 
 [project.scripts]
