--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "typing-extensions>=4.0.0",
     "GitPython>=3.1.44",
     "backoff>=2.2.1",
+    "python-dotenv>=1.1.0",
 ]
 
 [project.scripts]
