--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "GitPython>=3.1.44",
     "backoff>=2.2.1",
     "python-dotenv>=1.1.0",
+    "beautifulsoup4>=4.12.0",
 ]
 
 [project.scripts]
