--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "backoff>=2.2.1",
     "python-dotenv>=1.1.0",
     "beautifulsoup4>=4.12.0",
+    "psutil>=5.9.0",
 ]
 
 [project.scripts]
