--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "test-evaluator-agent"
 version = "0.1.0"
 description = "AI-powered data extraction evaluator agent using LangGraph"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 authors = [
     {name = "Agentic Data Mining", email = "noreply@example.com"}
 ]
@@ -41,7 +41,7 @@ dependencies = [
     "typing-extensions>=4.0.0",
     "GitPython>=3.1.44",
     "backoff>=2.2.1",
-    "python-dotenv>=1.1.0",
+    "python-dotenv==1.0.1",
     "beautifulsoup4>=4.12.0",
     "psutil>=5.9.0",
 ]
