build: update openai, gitpython, langchain deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,19 +31,19 @@ dependencies = [
     "langchain>=0.3.0",
     "langchain-mcp-adapters>=0.1.0",
     "langchain-core>=0.3.0",
-    "langchain-openai>=0.3.0",
     "langgraph-checkpoint>=2.0.0",
     "langgraph-prebuilt>=0.2.0",
     "jsonschema>=4.0.0",
     "anthropic>=0.50.0",
-    "openai>=1.0.0",
     "pydantic>=2.0.0",
     "typing-extensions>=4.0.0",
-    "GitPython>=3.1.44",
     "backoff>=2.2.1",
     "python-dotenv==1.0.1",
     "beautifulsoup4>=4.12.0",
     "psutil>=5.9.0",
+    "gitpython==3.1.43",
+    "openai==1.54.0",
+    "langchain-openai>=0.2.11",
 ]
 
 [project.scripts]
