--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,8 @@ Issues = "https://github.com/StaircaseAPI/agentic-data-mining/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["test_evaluator_agent*"]
+include = ["test_evaluator_agent*", "counties/*.py"]
 
 [tool.setuptools.package-data]
 test_evaluator_agent = ["*.py"]
+counties = ["*.py"]
