Try to include counties scripts to the package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,8 +56,8 @@ Issues = "https://github.com/StaircaseAPI/agentic-data-mining/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["test_evaluator_agent*", "counties/*.py"]
+include = ["test_evaluator_agent*"]
 
 [tool.setuptools.package-data]
 test_evaluator_agent = ["*.py"]
-counties = ["*.py"]
+
